[package]
name = "nes-core"
version = "0.1.0"
edition = "2021"
authors = ["Vignesh Paranthaman <vignesh-p@outlook.com>"]
description = "An NES emulator (core)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]

[build-dependencies]
serde_json = "1.0.111"
