# Testing CPU with a snake game
# https://bugzmanov.github.io/nes_ebook/chapter_3_4.html
# https://skilldrick.github.io/easy6502/#snake

[package]
name = "snake-6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
nes-core = {path = "../nes-core"}